kustomize/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-postgres
  labels:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
