kustomize/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-redis
  labels:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
