kustomize/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-result
  labels:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: result
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: result
  ports:
    - port: 80
      targetPort: 80
      name: http
