kustomize/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-vote
  labels:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: vote
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: voting-app
    app.kubernetes.io/instance: voting-app
    app.kubernetes.io/component: vote
  ports:
    - port: 80
      targetPort: 80
      name: http
